@@ -27,6 +27,7 @@ public class MediaItem extends Item
 
 	static final Media file = new Media().optional().lengthMax(20);
 
+	/** @cope.getURL none */
 	static final Media image = new Media().optional().contentTypeSub("image");
 	
 	static final Media photo = new Media().optional().lengthMax(2000).contentType("image/jpeg");
@@ -70,6 +71,12 @@ public class MediaItem extends Item
 	{
 		return custom.getURL(this);
 	}
+
+	final java.lang.String getImageURL()
+	{
+		return MediaItem.image.getNamedURL(this, getName());
+	}
+
 	
 	/**
 
@@ -262,16 +269,6 @@ public class MediaItem extends Item
 				java.io.IOException
 	{
 		MediaItem.file.set(this,body,contentType);
-	}/**
-
-	 **
-	 * Returns a URL the content of {@link #image} is available under.
-	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
-	 *       It can be customized with the tag <tt>@cope.getURL public|package|protected|private|none|non-final</tt> in the comment of the field.
-	 */
-	final java.lang.String getImageURL()
-	{
-		return MediaItem.image.getURL(this);
 	}/**
 
 	 **
