@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* MediaPath got new method getNamedURL, with addtional parameter for setting the "name" of the media
 * Console History puts date first in unique constraints
 	- makes purging faster
 	- affect persistent schema of the history
